--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -1,7 +1,8 @@
 {
   "translation": {
     "plansItem": {
-      "select": "Selecionar"
+      "select": "Selecionar",
+      "monthPeriod": "/mês"
     }
   }
 }
