feat: add translation support for the CurrentPlanBox component

--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -3,6 +3,11 @@
     "plansItem": {
       "select": "Selecionar",
       "monthPeriod": "/mês"
+    },
+    "currentPlanBox": {
+      "manage": "Gerenciar",
+      "monthPeriod": "/mês",
+      "title": "Meu Plano"
     }
   }
 }
