feat: add translation to datetime format separator

--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -21,6 +21,9 @@
     },
     "noReceivedMailsBox": {
       "description": "Nenhum e-mail para ser mostrado."
+    },
+    "format": {
+      "dateSeparator": " às "
     }
   }
 }
