--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -41,6 +41,13 @@
       "profile": "Editar Perfil",
       "logout": "Sair",
       "back": "Voltar"
+    },
+    "modals": {
+      "close": "Fechar",
+      "resend": {
+        "title": "Reenvio de E-mail",
+        "body": "Em alguns segundos seu e-mail será enviado novamente. Como apenas fazemos o redirecionamento de e-mails, por favor, verifique sua Caixa de Spam também."
+      }
     }
   }
 }
