feat: add UserMailDeleteModal translations

--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -45,6 +45,7 @@
     "modals": {
       "close": "Fechar",
       "cancel": "Cancelar",
+      "delete": "Deletar",
       "resend": {
         "title": "Reenvio de E-mail",
         "body": "Em alguns segundos seu e-mail será enviado novamente. Como apenas fazemos o redirecionamento de e-mails, por favor, verifique sua Caixa de Spam também."
@@ -52,6 +53,10 @@
       "terms": {
         "title": "Termos de Uso",
         "accept": "Aceitar os Termos"
+      },
+      "deleteaccount": {
+        "title": "Deletar Conta de E-mail",
+        "body": "Tem certeza que deseja deletar essa conta de e-mail? Você não poderá desfazer essa ação."
       }
     }
   }
