--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -65,14 +65,21 @@
         "accountname": "Nome da conta",
         "redirecttome": "Redirecionar para o meu e-mail",
         "redirectto": "Redirecionar para",
-        "enabled": "Habilitado?",
-        "errortitle": "Oopps!",
-        "errordesc": "Esse nome de conta não está disponível, tente mudar um pouco."
+        "enabled": "Habilitado?"
       },
       "editaccount": {
         "title": "Edit",
         "noedit": "Não é possível editar o nome do e-mail."
       }
+    },
+    "errors": {
+      "title": "Oopps!",
+      "default": "Não foi possível completar a operação.",
+      "usedaccount": "Esse nome de conta não está disponível, tente mudar um pouco."
+    },
+    "fields": {
+      "email": "E-mail",
+      "password": "Senha"
     }
   }
 }
