--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -85,7 +85,13 @@
     },
     "fields": {
       "email": "E-mail",
-      "password": "Senha"
+      "password": "Senha",
+      "first_name": "Nome",
+      "last_name": "Sobrenome",
+      "name": "Nome",
+      "mail_user": "Usuário de E-mail",
+      "redirect_enabled": "Redirecionamento Habilitado",
+      "redirect_to": "Redirecionar Para"
     },
     "alerts": {
       "login": {
