--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -262,7 +262,8 @@
       "edit": "Editar"
     },
     "boundaries": {
-      "accounts": "Houve um erro ao carregar as suas contas de e-mail. Tente recarregar a página."
+      "accounts": "Houve um erro ao carregar as suas contas de e-mail. Aguarde alguns instantes e tente recarregar a página.",
+      "received": "Houve um erro ao carregar os e-mails recebidos. Aguarde alguns instantes e Tente recarregar a página."
     }
   }
 }
