feat: add error boundary to latest received mails and to latest mail accounts (#65)
* feat: add error boundary to latest mail accounts component

* feat: add error boundary to latest received mails and add tests for the error boundaries

--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -260,6 +260,10 @@
       "delete": "Deletar Conta",
       "noDeletePermission": "Você só pode deletar essa conta depois de {{ days }} dia(s).",
       "edit": "Editar"
+    },
+    "boundaries": {
+      "accounts": "Houve um erro ao carregar as suas contas de e-mail. Aguarde alguns instantes e tente recarregar a página.",
+      "received": "Houve um erro ao carregar os e-mails recebidos. Aguarde alguns instantes e Tente recarregar a página."
     }
   }
 }
