feat: begin preparation of structure for the swiper

--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -265,7 +265,8 @@
       "accounts": "Houve um erro ao carregar as suas contas de e-mail. Aguarde alguns instantes e tente recarregar a página.",
       "received": "Houve um erro ao carregar os e-mails recebidos. Aguarde alguns instantes e tente recarregar a página.",
       "plans": "Houve um erro ao carregar os planos. Aguarde alguns instantes e tente recarregar a página.",
-      "profile": "Houve um erro ao carregar os dados do seu perfil. Aguarde alguns instantes e tente recarregar a página."
+      "profile": "Houve um erro ao carregar os dados do seu perfil. Aguarde alguns instantes e tente recarregar a página.",
+      "socialcontent": "Houve um erro ao carregar os dados de conteúdo social."
     }
   }
 }
