--- a/src/translations/pt_BR/texts.json
+++ b/src/translations/pt_BR/texts.json
@@ -152,6 +152,9 @@
     },
     "home": {
       "title": "Bem-vindo!",
+      "socialcontent": {
+        "title": "Conteúdos Sociais"
+      },
       "accounts": {
         "title": "Minhas contas de e-mail",
         "account": "Conta",
